tests/corpus/source_to_intent_parser/rejected/reject_import_escape.tucsrc
import os

@triton.jit
def import_escape(x, y):
    tl.store(y, x)
